--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: atm_mysql
     hostname: atm-mysql
     environment : 
+      - CHOKIDAR_USEPOLLING=true
       - MYSQL_ROOT_PASSWORD=richardatm
     volumes :
       - ./mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
