--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "mysql2": "^3.6.5"
   }
